# NDKExampl

app/: build.gradle
app/src/: ffmpeg_param.md  readme.md
app/src/androidTest/java/com/youbesun/myapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yekong.aac
app/src/main/cpp/: CMakeLists.txt  Demo.cpp  NewTest.cpp  NewTest.h  Test.h  native-lib.cpp
app/src/main/java/com/youbesun/myapplication/: Bean.java  Color.java  MainActivity.kt  MeGLSurfaceView.kt  MySurfaceView.kt  NDKTool.java  ReflectBean.java  ZZTest.java
app/src/main/res/drawable/: vector_drawable_prive_flag.xml
app/src/main/res/drawable-xxhdpi/: vector_drawable_prive_flag.xml
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/youbesun/myapplication/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
